# floatshare

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/workflows/: test.yml
config/: __init__.py  base.py  database.py  settings.py  trading.py
data/news/: industry_baseline.json  industry_keywords.json
data/news/baselines/: 2018-01.json  2018-02.json  2018-03.json  2018-04.json  2018-05.json  2018-06.json  2018-07.json  2018-08.json  2018-09.json  2018-10.json  2018-11.json  2018-12.json  2019-01.json  2019-02.json  2019-03.json  2019-04.json  2019-05.json  2019-06.json  2019-07.json  2019-08.json  2019-09.json  2019-10.json  2019-11.json  2019-12.json  2020-01.json  2020-02.json  2020-03.json  2020-04.json  2020-05.json  2020-06.json  2020-07.json  2020-08.json  2020-09.json  2020-10.json  2020-11.json  2020-12.json  2021-01.json  2021-02.json  2021-03.json  2021-04.json  (+60 more)
deploy/configs/: health_check.json
deploy/scripts/: health_check.py  install.sh
deploy/systemd/: floatshare-health.service  floatshare-health.timer
docs/: changelog.rst  conf.py  index.rst  quickstart.rst
docs/api/: index.rst
it/: test_integration.py
notebooks/: ml_state.md  run_sector_relay_backtest.py  sector_lead_lag.py  tune_strategy.py
scripts/: add_status_indexes.py  archive_yearly.py  backfill_cctv_mentions.py  backtest_pop.py  build_news_baseline.py  check_trade_date_dups.py  com.floatshare.daily-sync.plist  com.floatshare.daily-train.plist  daily-sync.sh  daily-train.sh  disk_audit.py  drift_check.py  fetch_data.py  gen_phase3_signals.py  init_db.py  install-daily-sync.sh  normalize_trade_date.py  pipeline_timing_probe.py  run_backtest.py  sync_financials_bulk.py  test_data_sources.py  walk_forward_eval.py
src/: __init__.py
src/account/: __init__.py  asset.py  portfolio.py  storage.py  transaction.py
src/analysis/: __init__.py  attribution.py  metrics.py  report.py  visualization.py
src/backtest/: __init__.py  context.py  engine.py  matcher.py  report.py  runner.py
src/cli/: __init__.py  app.py
src/data/: __init__.py  cleaner.py  loader.py  models.py  pipeline.py  syncer.py  validator.py
src/data/sources/: __init__.py  akshare.py  baostock.py  eastmoney.py  tushare.py
src/data/storage/: __init__.py  cache.py  database.py  pool.py
src/execution/: __init__.py  order.py  position.py
src/execution/broker/: __init__.py  base.py  simulator.py
src/floatshare/: __init__.py  analytics.py
src/floatshare/analytics/: __init__.py
src/floatshare/application/: __init__.py  backtest.py  bootstrap.py  data_loader.py  data_syncer.py  db_integrity.py  db_snapshot.py  feature_registry.py  news_ingest.py  sync_progress.py  treasury.py
src/floatshare/cli/: __init__.py  bt_runs.py  healthcheck.py  ml_runs.py  run_backtest.py  run_eval_ppo.py  run_pipeline.py  run_sync.py
src/floatshare/domain/: __init__.py  enums.py  pipeline.py  schema.py  trading.py
src/floatshare/factors/: __init__.py  momentum.py  value.py
src/floatshare/infrastructure/: __init__.py  data_cleaner.py
src/floatshare/interfaces/: __init__.py  data_source.py  factor.py
src/floatshare/ml/: __init__.py  audit.py  audit_manual.py  audit_mask.py  audit_tushare.py  backtest_tracking.py  config.py  eval.py  feature_eval.py  features.py  labels.py  normalize.py  pipeline_stages.py  pipeline_stages_internal.py  profiling.py  recommend.py  tracking.py  train.py  train_grpo.py  train_pop.py  types.py
src/floatshare/observability/: __init__.py  alert.py  features.py  metrics.py
src/floatshare/risk/: __init__.py  limits.py
src/floatshare/strategy/: __init__.py  registry.py
src/floatshare/web/: __init__.py  app.py  components.py  data.py  indicators.py
src/market/: __init__.py  indicators.py  objective.py  subjective.py
src/monitor/: __init__.py  alert.py  health.py  logger.py
src/risk/: __init__.py  exposure.py  limits.py  manager.py
src/strategy/: __init__.py  base.py  registry.py
src/strategy/factors/: __init__.py  base.py  (+3 more)
src/utils/: async_loader.py  cache.py  di.py  events.py  logging.py  market_utils.py  metrics.py  plugin.py  retry.py  scheduler.py  serialization.py  tracing.py
strategies/: __init__.py  boll_strategy.py  dual_thrust.py  kdj_strategy.py  ma_cross.py  macd_strategy.py  momentum_strategy.py  ppo_signal.py  rsi_strategy.py  sector_relay.py  trendline_oversold_strategy.py  trendline_strategy.py
stubs/backtrader/: __init__.pyi
tests/: conftest.py  test_syncer.py
tests/fixtures/: __init__.py  daily_bars.json  dividends.json  hs300_constituents.json  stock_list.json
tests/mocks/: __init__.py  mock_data_source.py
tests/test_analytics/: test_report.py
tests/test_application/: test_backtest.py  test_data_loader.py  test_data_syncer.py  test_db_integrity.py  test_pipeline_preflight.py  test_pipeline_runner.py  test_pipeline_stages.py  test_treasury.py  test_writeback.py
tests/test_backtest/: __init__.py  test_engine.py
tests/test_cli/: test_sync_incremental.py
tests/test_data/: test_cleaner.py  test_syncer.py  test_with_mock.py
tests/test_domain/: test_enums_and_trading.py  test_schema.py
tests/test_factors/: test_factors.py
tests/test_infrastructure/: test_astock_commission.py  test_cached_source.py  test_local_db_source.py  test_metrics_sink.py  test_tushare_refresh.py
tests/test_ml/: test_audit_causality_news.py  test_audit_mask.py  test_audit_tushare.py  test_data_pipeline.py  test_dual_axis.py  test_env.py  test_feature_eval.py  test_features_values.py  test_grpo.py  test_grpo_smoke.py  test_model.py  test_pop.py  test_ppo_smoke.py  test_profiling.py  test_suspend_count.py  test_tracking.py  test_universe.py
tests/test_observability/: test_alert.py  test_counter_correctness.py  test_features.py  test_metrics.py
tests/test_strategy/: __init__.py  test_factors.py
tests/test_web/: test_data.py
ut/: test_events.py  test_pipeline.py
ut/account/: test_portfolio.py
ut/core/: test_cache.py  test_serialization.py
ut/infra/: test_config.py  test_di.py  test_retry.py
(+79 files in other folders)
