[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floatshare"
version = "0.1.0"
description = "股票量化交易系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FloatShare Team"}
]
keywords = ["quantitative", "trading", "stock", "backtest", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # 数据处理
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    # 数据源
    "akshare>=1.10.0",
    # 回测引擎
    "backtrader>=1.9.78",
    # 技术因子
    "ta>=0.11.0",
    # 绩效分析
    "quantstats>=0.0.62",
    # 日志/告警
    "loguru>=0.7.0",
    "apprise>=1.7.0",
    # 配置/环境
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
tushare = [
    "tushare>=1.2.0",
]
all = [
    "floatshare[dev,tushare]",
]

[project.urls]
Homepage = "https://github.com/floatshare/floatshare"
Documentation = "https://github.com/floatshare/floatshare#readme"
Repository = "https://github.com/floatshare/floatshare"

[project.scripts]
floatshare = "scripts.run_backtest:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "strategies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | __pycache__
    | data
    | logs
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src", "config", "strategies"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
